--- a/Obi/Obi/Dialogs/SaveProjectAsDialog.fi.resx
+++ b/Obi/Obi/Dialogs/SaveProjectAsDialog.fi.resx
@@ -328,7 +328,7 @@
     <value>4</value>
   </data>
   <data name="m_ProjectNameTextBox.Text" xml:space="preserve">
-    <value>projekti.obi</value>
+    <value>projekti</value>
   </data>
   <data name="&gt;&gt;m_ProjectNameTextBox.Name" xml:space="preserve">
     <value>m_ProjectNameTextBox</value>
