--- a/Obi/Obi/Dialogs/CheckUpdates.fi.resx
+++ b/Obi/Obi/Dialogs/CheckUpdates.fi.resx
@@ -189,7 +189,7 @@
     <value>4</value>
   </data>
   <data name="m_RdRemindForNextVersion.Text" xml:space="preserve">
-    <value>Ilmoita seuraavasta &amp;versiosta; sivuuta tämä</value>
+    <value>Ilmoita seuraavasta &amp;versiosta; ohita tämä</value>
   </data>
   <data name="&gt;&gt;m_RdRemindForNextVersion.Name" xml:space="preserve">
     <value>m_RdRemindForNextVersion</value>
