--- a/Obi/Obi/Dialogs/DownloadFile.fi.resx
+++ b/Obi/Obi/Dialogs/DownloadFile.fi.resx
@@ -117,130 +117,37 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <metadata name="helpProvider1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>17, 17</value>
-  </metadata>
-  <metadata name="$this.Localizable" type="System.Boolean, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <assembly alias="System.Drawing" name="System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="mProgressBar.Location" type="System.Drawing.Point, System.Drawing">
-    <value>4, 24</value>
+  <data name="richTextBox1.Text" xml:space="preserve">
+    <value>Lataa ffmpeg allaolevasta linkistä tai klikkaamalla "Lataa ffmpeg" -painiketta, jotta voit koodata mp4, amr ja 3gp.
+http://www.daisy.org/obi/download
+ Latauksen jälkeen tee seuraavat vaiheet:-
+
+1) Paikallista Program files kansio C-asemassa.
+2) Etsi "The Urakawa Project" kansio "Program files" kansiosta.
+3) "The Urakawa Project" kansiosta avaa "Obi x.x" kansio.\ n4)Kopioi ladattu "ffmpeg.exe"  "Obi x.x" kansioon
+
+Voit myös avata "Obi x.x" kansion yksinkertaisesti klikkaamalla "Avaa Obi hakemisto" -painiketta ja sitten kopioida ladattu "ffmpeg.exe" sen sisälle.
+Huomautus: Ominaisuudet ovat vain kokeneille käyttäjille, tallennetut DAISY / EPUB kirjat eivät välttämättä validoidu näillää uudemmilla äänitiedostomuodoilla. </value>
   </data>
-  <data name="mProgressBar.Size" type="System.Drawing.Size, System.Drawing">
-    <value>373, 23</value>
+  <data name="m_btnClose.AccessibleName" xml:space="preserve">
+    <value>Sulje</value>
   </data>
-  <assembly alias="mscorlib" name="mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="mProgressBar.TabIndex" type="System.Int32, mscorlib">
-    <value>1</value>
+  <data name="m_btnClose.Text" xml:space="preserve">
+    <value>&amp;Sulje</value>
   </data>
-  <data name="&gt;&gt;mProgressBar.Name" xml:space="preserve">
-    <value>mProgressBar</value>
+  <data name="m_btnDownload.AccessibleName" xml:space="preserve">
+    <value>Lataa ffmpeg</value>
   </data>
-  <data name="&gt;&gt;mProgressBar.Type" xml:space="preserve">
-    <value>System.Windows.Forms.ProgressBar, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  <data name="m_btnDownload.Text" xml:space="preserve">
+    <value>&amp;Lataa ffmpeg</value>
   </data>
-  <data name="&gt;&gt;mProgressBar.Parent" xml:space="preserve">
-    <value>$this</value>
+  <data name="m_btnFolder.AccessibleName" xml:space="preserve">
+    <value>Avaa Obi hakemisto</value>
   </data>
-  <data name="&gt;&gt;mProgressBar.ZOrder" xml:space="preserve">
-    <value>2</value>
-  </data>
-  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="m_BtnCancel.FlatStyle" type="System.Windows.Forms.FlatStyle, System.Windows.Forms">
-    <value>Flat</value>
-  </data>
-  <data name="m_BtnCancel.Location" type="System.Drawing.Point, System.Drawing">
-    <value>302, 63</value>
-  </data>
-  <data name="m_BtnCancel.Size" type="System.Drawing.Size, System.Drawing">
-    <value>75, 23</value>
-  </data>
-  <data name="m_BtnCancel.TabIndex" type="System.Int32, mscorlib">
-    <value>2</value>
-  </data>
-  <data name="m_BtnCancel.Text" xml:space="preserve">
-    <value>&amp;Peruuta</value>
-  </data>
-  <data name="&gt;&gt;m_BtnCancel.Name" xml:space="preserve">
-    <value>m_BtnCancel</value>
-  </data>
-  <data name="&gt;&gt;m_BtnCancel.Type" xml:space="preserve">
-    <value>System.Windows.Forms.Button, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
-  <data name="&gt;&gt;m_BtnCancel.Parent" xml:space="preserve">
-    <value>$this</value>
-  </data>
-  <data name="&gt;&gt;m_BtnCancel.ZOrder" xml:space="preserve">
-    <value>1</value>
-  </data>
-  <data name="m_lbWaitForCancellation.AutoSize" type="System.Boolean, mscorlib">
-    <value>True</value>
-  </data>
-  <data name="m_lbWaitForCancellation.Location" type="System.Drawing.Point, System.Drawing">
-    <value>1, 9</value>
-  </data>
-  <data name="m_lbWaitForCancellation.Size" type="System.Drawing.Size, System.Drawing">
-    <value>277, 16</value>
-  </data>
-  <data name="m_lbWaitForCancellation.TabIndex" type="System.Int32, mscorlib">
-    <value>3</value>
-  </data>
-  <data name="m_lbWaitForCancellation.Text" xml:space="preserve">
-    <value>Operaatio keskeytetty... Viimeistellään meneillään oleva tehtävä</value>
-  </data>
-  <data name="m_lbWaitForCancellation.Visible" type="System.Boolean, mscorlib">
-    <value>False</value>
-  </data>
-  <data name="&gt;&gt;m_lbWaitForCancellation.Name" xml:space="preserve">
-    <value>m_lbWaitForCancellation</value>
-  </data>
-  <data name="&gt;&gt;m_lbWaitForCancellation.Type" xml:space="preserve">
-    <value>System.Windows.Forms.Label, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
-  <data name="&gt;&gt;m_lbWaitForCancellation.Parent" xml:space="preserve">
-    <value>$this</value>
-  </data>
-  <data name="&gt;&gt;m_lbWaitForCancellation.ZOrder" xml:space="preserve">
-    <value>0</value>
-  </data>
-  <data name="helpProvider1.HelpNamespace" xml:space="preserve">
-    <value>Obi Help.chm</value>
-  </data>
-  <data name="$this.AutoScaleDimensions" type="System.Drawing.SizeF, System.Drawing">
-    <value>8, 16</value>
-  </data>
-  <data name="$this.ClientSize" type="System.Drawing.Size, System.Drawing">
-    <value>384, 87</value>
-  </data>
-  <data name="$this.Font" type="System.Drawing.Font, System.Drawing">
-    <value>Microsoft Sans Serif, 9.75pt</value>
-  </data>
-  <data name="$this.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
-    <value>4, 4, 4, 4</value>
-  </data>
-  <data name="$this.MaximumSize" type="System.Drawing.Size, System.Drawing">
-    <value>450, 125</value>
-  </data>
-  <data name="$this.MinimumSize" type="System.Drawing.Size, System.Drawing">
-    <value>450, 74</value>
-  </data>
-  <data name="$this.StartPosition" type="System.Windows.Forms.FormStartPosition, System.Windows.Forms">
-    <value>CenterParent</value>
+  <data name="m_btnFolder.Text" xml:space="preserve">
+    <value>&amp;Avaa Obi hakemisto</value>
   </data>
   <data name="$this.Text" xml:space="preserve">
-    <value>Operaatio käynnissä</value>
-  </data>
-  <data name="&gt;&gt;helpProvider1.Name" xml:space="preserve">
-    <value>helpProvider1</value>
-  </data>
-  <data name="&gt;&gt;helpProvider1.Type" xml:space="preserve">
-    <value>System.Windows.Forms.HelpProvider, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
-  <data name="&gt;&gt;$this.Name" xml:space="preserve">
-    <value>ProgressDialog</value>
-  </data>
-  <data name="&gt;&gt;$this.Type" xml:space="preserve">
-    <value>System.Windows.Forms.Form, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+    <value>Lataa tiedosto</value>
   </data>
 </root>
