--- a/Obi/Obi/Dialogs/ImportFileSplitSize.fi.resx
+++ b/Obi/Obi/Dialogs/ImportFileSplitSize.fi.resx
@@ -784,7 +784,7 @@
     <value>4, 4, 4, 4</value>
   </data>
   <data name="$this.Text" xml:space="preserve">
-    <value>Tuo äänitiedostojen asetukset</value>
+    <value>Tuotavien äänitiedostojen asetukset</value>
   </data>
   <data name="&gt;&gt;helpProvider1.Name" xml:space="preserve">
     <value>helpProvider1</value>
