--- a/Obi/Obi/Dialogs/SetPageNumber.fi.resx
+++ b/Obi/Obi/Dialogs/SetPageNumber.fi.resx
@@ -430,7 +430,7 @@
     <value>4, 4, 4, 4</value>
   </data>
   <data name="$this.Text" xml:space="preserve">
-    <value>Aseta sivulukumäärä</value>
+    <value>Aseta sivun numero</value>
   </data>
   <data name="&gt;&gt;helpProvider1.Name" xml:space="preserve">
     <value>helpProvider1</value>
@@ -443,5 +443,8 @@
   </data>
   <data name="&gt;&gt;$this.Type" xml:space="preserve">
     <value>System.Windows.Forms.Form, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="m_chkAutoFillPages.Text" xml:space="preserve">
+    <value>Täytä sivut automaattisesti</value>
   </data>
 </root>
