--- a/Obi/Obi/Dialogs/UserRegistration.fi.resx
+++ b/Obi/Obi/Dialogs/UserRegistration.fi.resx
@@ -223,7 +223,7 @@
     <value>6</value>
   </data>
   <data name="m_lblRetypeEmail.Text" xml:space="preserve">
-    <value>Sähköpostiosoite &amp;uudelleen</value>
+    <value>Sähköpostiosoite &amp;uudelleen:</value>
   </data>
   <data name="&gt;&gt;m_lblRetypeEmail.Name" xml:space="preserve">
     <value>m_lblRetypeEmail</value>
@@ -512,7 +512,7 @@
     <value>2</value>
   </data>
   <data name="m_lblName.Text" xml:space="preserve">
-    <value>&amp;Nimi</value>
+    <value>&amp;Nimi:</value>
   </data>
   <data name="&gt;&gt;m_lblName.Name" xml:space="preserve">
     <value>m_lblName</value>
